syntax = "proto3";

package kayak.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/binarymatt/kayak/gen/kayak/v1;kayakv1";

message Stream {
  string name = 1;
  int64 partition_count = 2;
  int64 ttl = 3;
  optional StreamStats stats = 4;
}
message StreamStats {
  map<int64, int64> partition_counts = 1;
  int64 record_count = 2;
  repeated Group groups = 3;
}
message Group {
  string stream_name = 1;
  string name = 2;
  map<int64, string> partition_positions = 3;
}
message PartitionAssignment {
  string stream_name = 1;
  string group_name = 2;
  int64 partition = 3;
  string worker_id = 4;
  int64 expires_at = 5;
}
message Worker {
  string stream_name = 1;
  string group_name = 2;
  string id = 3;
  int64 partition_assignment = 4;
  string position = 5;
  int64 lease_expires = 6;
}
message Record {
  // name of the stream the record is being added to. Will be set by PutRecordsRequest
  string stream_name = 1;
  // partition is set by server.
  int64 partition = 2;
  // id is used to hashed and used for partition assignment, can be set by client.
  bytes id = 3;
  // internal id is used as identifier in partition stream. Set by server.
  string internal_id = 4;
  map<string, string> headers = 5;
  bytes payload = 6 [(buf.validate.field).required = true];
}
